fixed first row spacing

--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -1,3 +1,6 @@
+body {
+    width: auto;
+}
 .main-header {
     font-size: 3.5rem;
     padding-left: 0;
@@ -312,11 +315,21 @@
 
 @media only screen and (max-width: 830px) {
     #first-row {
-        background-size: 100% 80%;
+        background-size: 100% 100%;
     }
 
     .jumbotron {
-        margin-top: 8%;
-        margin-left: 3%;
+        margin-top: 13%;
+        /* margin-left: 3%; */
+    }
+
+    [class*="col"] {
+        width: 100%;
+      }
+
+    .next-page {
+        margin-top: 26%;
+        margin-left: 30.5%;
+        margin-right: auto;
     }
 }
